Добавлена кластеризация методов k-medoids

--- a/4.0.4_ca_spd.Rmd
+++ b/4.0.4_ca_spd.Rmd
@@ -43,6 +43,7 @@ source("functions.R")
 library("factoextra")
 library("ggdendro")
 library(cluster)
+set.seed(10)
 ```
 
 ```{r}
@@ -67,7 +68,7 @@ df <- df.spd
 ## Иерархический кластерный анализ
 
 ```{r}
-set.seed(11)
+
 ```
 
 ```{r}
@@ -269,7 +270,7 @@ ggplot(elbow_df, aes(x = k, y = wss)) +
 
 ### Все переменные
 ```{r}
-set.seed(11)
+
 km_results <- list()
 
 for (k in 2:5) {
@@ -294,7 +295,7 @@ for (k in 2:5) {
 ### Все некоррелированные переменные
 
 ```{r}
-set.seed(11)
+
 km_results <- list()
 
 for (k in 2:5) {
@@ -318,7 +319,7 @@ for (k in 2:5) {
 ### Время, расстояние, точность
 
 ```{r}
-set.seed(11)
+
 km_results <- list()
 
 for (k in 2:5) {
@@ -341,7 +342,7 @@ for (k in 2:5) {
 ### Паузы
 
 ```{r}
-set.seed(11)
+
 km_results <- list()
 
 for (k in 2:5) {
@@ -359,6 +360,94 @@ for (k in 2:5) {
                ))
 }
 ```
+
+
+## K-medoids
+### Все переменные
+```{r}
+
+
+for (k in 2:5) {
+  kmd.res <- pam(df.num.scaled, k = k)
+  df[, paste0("all_kmdclust", k)] <- kmd.res$cluster
+  
+  sil <- silhouette(kmd.res$cluster, dist(df.num.scaled))
+  print(fviz_silhouette(sil))
+  
+  print(fviz_cluster(kmd.res, data = na.omit(df.num.scaled),
+               ggtheme = theme_minimal(),
+               main = "Partitioning Clustering Plot",
+               geom = c("point")
+               ))
+}
+
+
+```
+
+### Все некоррелированные переменные
+
+```{r}
+
+
+for (k in 2:5) {
+  kmd.res <- pam(df.not_corr, k)
+  df[, paste0("notcorr_kmdclust", k)] <- kmd.res$cluster
+  
+  sil <- silhouette(kmd.res$cluster, dist(df.not_corr))
+  print(fviz_silhouette(sil))
+  
+  print(fviz_cluster(kmd.res, data = na.omit(df.not_corr),
+               ggtheme = theme_minimal(),
+               main = "Partitioning Clustering Plot",
+               geom = c("point")
+               ))
+}
+
+```
+
+
+### Время, расстояние, точность
+
+```{r}
+
+
+for (k in 2:5) {
+  kmd.res <- pam(df.tdm, k)
+  df[, paste0("tdm_kmdclust", k)] <- kmd.res$cluster
+  
+  sil <- silhouette(kmd.res$cluster, dist(df.tdm))
+  print(fviz_silhouette(sil))
+  
+  print(fviz_cluster(kmd.res, data = na.omit(df.tdm),
+               ggtheme = theme_minimal(),
+               main = "Partitioning Clustering Plot",
+               geom = c("point")
+               ))
+}
+
+```
+
+### Паузы
+
+```{r}
+
+
+for (k in 2:5) {
+  kmd.res <- pam(df.pauses, k)
+  df[, paste0("pauses_kmdclust", k)] <- kmd.res$cluster
+  
+  sil <- silhouette(kmd.res$cluster, dist(df.pauses))
+  print(fviz_silhouette(sil))
+  
+  print(fviz_cluster(kmd.res, data = na.omit(df.pauses),
+               ggtheme = theme_minimal(),
+               main = "Partitioning Clustering Plot",
+               geom = c("point")
+               ))
+}
+```
+
+
 
 
 
