--- a/4.0.4_ca_spd.Rmd
+++ b/4.0.4_ca_spd.Rmd
@@ -49,9 +49,13 @@ n_clusters <- 5
 ```
 
 
+```{r}
+df <- df.spd
+```
+
 
 ```{r}
-df.spd$gender_num <- as.numeric(df.spd$gender) - 1
+df$gender_num <- as.numeric(df$gender) - 1
 ```
 
 
@@ -75,7 +79,7 @@ logarithmized_vars <- c("time_total", "time_mean", "time_sd", "time_median", "ti
                         "missings_sd", "missings_max", "missings_range", "missings_skew", 
                         "missings_kurtosis", "missings_se", "missings", "combo_missings")
 
-df.spd[, logarithmized_vars] <- lapply(df.spd[, logarithmized_vars], function(x) {
+df[, logarithmized_vars] <- lapply(df[, logarithmized_vars], function(x) {
   if (sum(x <= 0, na.rm = T) > 0) {
     x <- log1p(x)
   } else {
@@ -88,11 +92,7 @@ df.spd[, logarithmized_vars] <- lapply(df.spd[, logarithmized_vars], function(x)
 
 ```{r}
 #Пропуски
-df.spd <- na.omit(df.spd)
-```
-
-```{r}
-df <- df.spd
+df <- na.omit(df)
 ```
 
 ## Иерархический кластерный анализ
@@ -507,6 +507,7 @@ for (k in 2:n_clusters) {
 
 ```{r}
 df[, grep("clust", names(df))] <- lapply(df[, grep("clust", names(df))], factor)
+df <- merge(df.spd, select(df, user_id, contains("clust")), by = "user_id")
 ```
 
 
