Исправлена неточность шаблона для кластеризации, из-за которой не удалялись все лишние переменные для кластеризации

--- a/templates/4.0_ca_template.Rmd
+++ b/templates/4.0_ca_template.Rmd
@@ -15,6 +15,10 @@ output:
     toc_depth: '4'
 editor_options:
   chunk_output_type: inline
+params:
+  user_id: 3438
+  test_id: 84
+  data_from_db: TRUE
 ---
 
 
@@ -50,6 +54,7 @@ n_clusters <- 5
 
 ```{r}
 df <- df.{{stage}}
+df <- select(df, -session_id, -test_id, -ratio, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 ```
 
 {% elif stage == 'acc_spd' %}
