--- a/templates/4.0_ca_template.Rmd
+++ b/templates/4.0_ca_template.Rmd
@@ -15,10 +15,6 @@ output:
     toc_depth: '4'
 editor_options:
   chunk_output_type: inline
-params:
-  user_id: 3438
-  test_id: 84
-  data_from_db: TRUE
 ---
 
 
@@ -53,14 +49,14 @@ n_clusters <- 5
 {% if stage == "acc" or stage == "spd" %}
 
 ```{r}
-df <- df.{{stage}}
-df <- select(df, -session_id, -test_id, -ratio, -clicked_through_targets, -combo_clicked_through_targets, -stage)
+df <- select(df.{{stage}}, -session_id, -test_id, -ratio, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 ```
 
 {% elif stage == 'acc_spd' %}
 
 ```{r}
-pd <- select(df.acc, user_id, gender)
+info <- select(df.acc, user_id, session_id, test_id, ratio, gender)
+
 df.acc <- select(df.acc, user_id, everything(), -session_id, -test_id, -ratio, -gender, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 names(df.acc)[-1] <- paste0(names(df.acc)[-1], ".acc")
 
@@ -69,28 +65,28 @@ names(df.spd)[-1] <- paste0(names(df.spd)[-1], ".spd")
 
 df.acc_spd <- merge(df.acc, df.spd, by = "user_id")
 
-df.acc_spd <- merge(df.acc_spd, pd, by = "user_id")
-df.acc_spd <- select(df.acc_spd, user_id, gender, everything())
+df.acc_spd <- merge(info, df.acc_spd, by = "user_id")
 ```
 
 ```{r}
-df <- df.acc_spd
+df <- select(df.acc_spd, -session_id, -test_id, -ratio)
 ```
 
 {% elif stage == 'diff' %}
 
 ```{r}
-pd <- select(df.acc, user_id, gender)
+info <- select(df.acc, user_id, session_id, test_id, ratio, gender)
+
 df.acc <- select(df.acc, everything(), -user_id, -session_id, -test_id, -ratio, -gender, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 
 df.spd <- select(df.spd, everything(), -user_id, -session_id, -test_id, -ratio, -gender, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 
 df.diff <- df.acc - df.spd
-df.diff <- cbind(pd, df.diff)
+df.diff <- cbind(info, df.diff)
 ```
 
 ```{r}
-df <- df.diff
+df <- select(df.diff, -session_id, -test_id, -ratio)
 ```
 
 {% endif %}
