--- a/4.0.8_ca_diff.Rmd
+++ b/4.0.8_ca_diff.Rmd
@@ -15,10 +15,6 @@ output:
     toc_depth: '4'
 editor_options:
   chunk_output_type: inline
-params:
-  user_id: 3438
-  test_id: 84
-  data_from_db: TRUE
 ---
 
 
@@ -53,17 +49,18 @@ n_clusters <- 5
 
 
 ```{r}
-pd <- select(df.acc, user_id, gender)
+info <- select(df.acc, user_id, session_id, test_id, ratio, gender)
+
 df.acc <- select(df.acc, everything(), -user_id, -session_id, -test_id, -ratio, -gender, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 
 df.spd <- select(df.spd, everything(), -user_id, -session_id, -test_id, -ratio, -gender, -clicked_through_targets, -combo_clicked_through_targets, -stage)
 
 df.diff <- df.acc - df.spd
-df.diff <- cbind(pd, df.diff)
+df.diff <- cbind(info, df.diff)
 ```
 
 ```{r}
-df <- df.diff
+df <- select(df.diff, -session_id, -test_id, -ratio)
 ```
 
 
