--- a/6_sign_differences.Rmd
+++ b/6_sign_differences.Rmd
@@ -9,7 +9,8 @@ sd <- read.csv("./reports/sign_differences.csv")
 
 ```{r}
 sd.diff <- sd[order(sd$feature, sd$diff, decreasing = T), ]
-sd.diff
+sd.diff[grep("ds_acc_by", sd.diff$filename),]
+sd.diff[grep("ds_spd_by", sd.diff$filename),]
 
 
 # sd.diff[!duplicated(sd.diff$feature),]
