Убраны outliers из diff и spd

--- a/3.4_ds_by_stage_and_gender.Rmd
+++ b/3.4_ds_by_stage_and_gender.Rmd
@@ -115,8 +115,9 @@ save(clickers.spd, file = "./data/envs/1_desc_stat/clickers.spd.RData")
 ## outliers
 ## Выбросы найденные вручную с помощью кластеризации
 outliers.acc <- df.acc[df.acc$user_id %in% c(1264, 2700, 1121, 1915, 2045, 2637, 1359, 1717, 1855, 2358, 2676, 1182, 1747, 1981, 2992, 2633), ]
-outliers.spd <- df.spd[df.spd$user_id %in% c(), ]
-excluded_outliers <- unique(c(outliers.acc$user_id, outliers.spd$user_id))
+outliers.spd <- df.spd[df.spd$user_id %in% c(1263, 1324, 1457, 2206), ]
+outliers.diff <- df.acc[df.acc$user_id %in% c(1168, 1241, 1766, 2934), ] # Outliers найдены в diff
+excluded_outliers <- unique(c(outliers.acc$user_id, outliers.spd$user_id, outliers.diff$user_id))
 
 df.acc <- df.acc[!df.acc$user_id %in% excluded_outliers,]
 df.spd <- df.spd[!df.spd$user_id %in% excluded_outliers,]
